- Added: Beta title badge - Added: build-dev command - Added: Automatically convert client config to Vue environment variables - Updated: build command runs in production environment by default - Fixed: Client API base url - Fixed: Axios then/catch functions order - Fixed: Auth callback url - Fixed: ENV_NODE => NODE_ENV - Fixed: resolving dist/ folder - Fixed: configServer Function export mismatch

--- a/config/default.json5
+++ b/config/default.json5
@@ -15,7 +15,7 @@
 
   client: {
     // Defines the browser's and nav bar title
-    appTitle: "GitHub Voice",
+    title: "GitHub Voice",
 
     // URL to this server's API
     apiBaseUrl: "http://localhost:8080/"
