--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "watch": "vue-cli-service serve --watch",
-    "build": "cross-env NODE_ENV=production vue-cli-service build",
-    "build-dev": "vue-cli-service build",
+    "build": "vue-cli-service build --mode=production",
+    "build:dev": "vue-cli-service build --mode=development",
     "lint": "vue-cli-service lint"
+  },
+  "gitHooks": {
+    "pre-commit": "vue-cli-service lint"
   },
   "dependencies": {
     "async": "^3.2.0",
@@ -29,7 +32,7 @@
     "config": "^3.3.2",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
-    "cross-env": "^7.0.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "moment": "^2.29.1",
