--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -13,6 +13,8 @@ jobs:
           persist-credentials: false 
 
       - name: Install and Build 🔧
+        env:
+          GH_VOICE_CLIENT_API_BASE_URL: ${{ GH_VOICE_CLIENT_API_BASE_URL }}
         run: |
           npm install
           npm run-script build
