--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Install and Build 🔧
         env:
-          GH_VOICE_CLIENT_API_BASE_URL: ${{ GH_VOICE_CLIENT_API_BASE_URL }}
+          GH_VOICE_CLIENT_API_BASE_URL: ${{ secrets.GH_VOICE_CLIENT_API_BASE_URL }}
         run: |
           npm install
           npm run-script build
