--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "githubvoice",
   "version": "0.1.0",
-  "main": "src/server-main.js",
   "description": "",
   "author": "Alexis Incogito",
   "license": "MIT",
@@ -14,33 +13,43 @@
   },
   "homepage": "https://github.com/alexis-/GitHubVoice",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "watch": "vue-cli-service serve --watch",
-    "build": "vue-cli-service build --mode=production",
-    "build:dev": "vue-cli-service build --mode=development",
+    "serve": "concurrently \"npm run debug:server\" \"npm run debug:client\" --raw",
+    "build:client": "vue-cli-service build",
+    "build:server": "rimraf dist/server && tsc -p tsconfig.server.json",
+    "debug:client": "vue-cli-service serve --watch",
+    "debug:server": "nodemon --config ./nodemon.config.json",
     "lint": "vue-cli-service lint"
   },
   "gitHooks": {
-    "pre-commit": "vue-cli-service lint"
+    "DISABLED_pre-commit": "vue-cli-service lint"
   },
   "dependencies": {
+    "@awaitjs/express": "^0.6.3",
     "async": "^3.2.0",
     "async-parallel-foreach": "^1.0.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
+    "cache-manager": "^3.4.0",
+    "cache-manager-memory-store": "^1.1.0",
+    "concurrently": "^5.3.0",
     "config": "^3.3.2",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "md5": "^2.3.0",
     "moment": "^2.29.1",
     "node-cron": "^2.0.3",
+    "nodemon": "^2.0.6",
     "nouislider": "^14.6.3",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
+    "rimraf": "^3.0.2",
     "session-file-store": "^1.5.0",
+    "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
@@ -51,6 +60,14 @@
     "vuex-types": "^1.0.1"
   },
   "devDependencies": {
+    "@types/cache-manager": "^2.10.3",
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
+    "@types/md5": "^2.2.1",
+    "@types/node": "^14.14.16",
+    "@types/node-cron": "^2.0.3",
+    "@types/passport": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -63,6 +80,7 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
