--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,5 @@
 # Lint config files in the root ending .js
 !/*.js
-src/client/components/*
+src/client/components/base/*
 src/client/assets/*
 dist/*
