--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -10,18 +10,19 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
-          persist-credentials: false 
+          persist-credentials: false
 
       - name: Install and Build 🔧
         env:
-          GH_VOICE_CLIENT_API_BASE_URL: ${{ secrets.GH_VOICE_CLIENT_API_BASE_URL }}
+          GH_VOICE_CLIENT_API_HOST: ${{ secrets.GH_VOICE_CLIENT_API_HOST }}
         run: |
           npm install
           npm run-script build
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.6.2
+        uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: dist
+          BRANCH: gh-pages # The branch the action should deploy to
+          FOLDER: dist # The folder the action should deploy
+          CLEAN: true # Automatically remove deleted files from the deploy branch
