--- a/config/custom-environment-variables.json5
+++ b/config/custom-environment-variables.json5
@@ -6,13 +6,13 @@
     cors: "GH_VOICE_SRV_CORS",
     dataPath: "GH_VOICE_SRV_DATA_PATH",
     sessionsPath: "GH_VOICE_SRV_SESSIONS_PATH",
-    sessionSecret: "GH_VOICE_SRV_SESSION_SECRET",
+    sessionsSecret: "GH_VOICE_SRV_SESSION_SECRET",
     gitHubClientId: "GH_VOICE_SRV_GITHUB_CLIENT_ID",
     gitHubClientSecret: "GH_VOICE_SRV_GITHUB_CLIENT_SECRET",
   },
 
   client: {
     title: "GH_VOICE_CLIENT_TITLE",
-    apiBaseUrl: "GH_VOICE_CLIENT_API_BASE_URL",
+    apiHost: "GH_VOICE_CLIENT_API_HOST",
   }
 }
