--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -17,12 +17,12 @@ jobs:
           GH_VOICE_CLIENT_API_HOST: ${{ secrets.GH_VOICE_CLIENT_API_HOST }}
         run: |
           npm install
-          npm run-script build
+          npm run-script build:client
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to
-          FOLDER: dist # The folder the action should deploy
+          FOLDER: dist/client # The folder the action should deploy
           CLEAN: true # Automatically remove deleted files from the deploy branch
