--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "lodash.throttle": "^4.1.1",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "node-cron": "^2.0.3",
@@ -54,6 +55,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
+    "vue-shortkey": "^3.1.7",
     "vue-types": "^2.0.2",
     "vue2-transitions": "^0.3.0",
     "vuex": "^3.4.0",
@@ -64,6 +66,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.3",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/md5": "^2.2.1",
     "@types/node": "^14.14.16",
     "@types/node-cron": "^2.0.3",
