--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "0.0.9",
+    "v-click-outside": "^3.1.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
