--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@awaitjs/express": "^0.6.3",
+    "@types/passport-github": "^1.1.5",
+    "@types/tldjs": "^2.3.0",
     "async": "^3.2.0",
     "async-parallel-foreach": "^1.0.1",
     "axios": "^0.21.0",
@@ -49,6 +51,7 @@
     "passport-github": "^1.1.0",
     "rimraf": "^3.0.2",
     "session-file-store": "^1.5.0",
+    "tldjs": "^2.3.1",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "0.0.9",
