--- a/config/default.json5
+++ b/config/default.json5
@@ -45,7 +45,7 @@
     socialFacebook: "",
     socialTwitter: "",
     socialDiscord: "",
-    socialWebsite: "https://google.com",
+    socialWebsite: "",
   },
 
   // Which repositories' issues should be displayed to the client.
