- Added: patreon socialLink

--- a/config/custom-environment-variables.json5
+++ b/config/custom-environment-variables.json5
@@ -22,5 +22,6 @@
     socialFacebook: "GH_VOICE_CLIENT_SOCIAL_FACEBOOK",
     socialTwitter: "GH_VOICE_CLIENT_SOCIAL_TWITTER",
     socialDiscord: "GH_VOICE_CLIENT_SOCIAL_DISCORD",
+    socialPatreon: "GH_VOICE_CLIENT_SOCIAL_PATREON",
   }
 }
