--- a/config/default.json5
+++ b/config/default.json5
@@ -45,6 +45,7 @@
     socialFacebook: "",
     socialTwitter: "",
     socialDiscord: "",
+    socialPatreon: "",
   },
 
   // Which repositories' issues should be displayed to the client.
